<resources>
    <string name="app_name">Domotion</string>
    <string name="app_payoff">Home control and automation</string>
    <string name="description">Domotion is a domotics framework, designed for the Raspberry PI running Linux (Raspbian), but can also be used on other Linux platforms that have python installed. The Domotion app can be used to control devices on a Domotion system by a mobile phone or tablet.</string>
    <string name="minversion">Minimum Domotion version: 1.0.5</string>
    <string name="version">App version: 0.90</string>
    <string name="source">Source: https://github.com/Helly1206/Domotion</string>
    <string name="email">Please send comments and bugreports to: hellyrulez@home.nl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_none">---</string>
    <string name="nav_devices">devices</string>
    <string name="nav_controls">controls</string>
    <string name="nav_timers">timers</string>
    <string name="nav_holidays">holidays</string>
    <string name="nav_login">Login …</string>

    <string name="action_log">Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_browser">Open in Browser</string>
    <string name="action_about">About</string>

    <string name="settings_url">Domotion URL</string>
    <string name="settings_default_url">http://192.168.1.1</string>
    <string name="settings_user">Default User</string>
    <string name="settings_default_user">Nobody</string>
    <string name="settings_password">Password Required</string>
    <string name="settings_timeout">Service Timeout [ms]</string>
    <string name="settings_default_timeout">10000</string>
    <string name="settings_log">Log</string>
    <string name="settings_log_scroll">Automatic scrolling</string>

    <string name="saved_url">DomotionSavedUrl</string>
    <string name="saved_user">DomotionSavedUser</string>
    <string name="saved_password">DomotionSavedPassword</string>
    <string name="saved_timeout">DomotionSavedTimeout</string>
    <string name="saved_log_scroll">DomotionSavedLogScroll</string>

    <string name="header_datetime">Time</string>
    <string name="header_default_datetime">---</string>
    <string name="header_status">Status</string>
    <string name="header_status_nocon">No Connection</string>
    <string name="header_status_run">Running</string>
    <string name="header_status_set">Set Value</string>

    <string name="header_timers_sunrise">Sunrise</string>
    <string name="header_timers_sunset">Sunset</string>
    <string name="header_default_all">---</string>
    <string name="header_holidays_today">Today</string>
    <string name="title_activity_login">Login to Domotion</string>

    <string name="table_value">Value</string>
    <string name="table_time">Time</string>
    <string name="table_active">Active</string>
    <string name="table_today">Today</string>
    <string name="table_edit">Edit</string>
    <string name="table_delete">Delete</string>
    <string name="table_recalculate">Recalculate</string>
    <string name="table_off">Off</string>
    <string name="table_on">On</string>
    <string name="table_up">Up</string>
    <string name="table_down">Down</string>
    <string name="table_true">True</string>
    <string name="table_false">False</string>
    <string name="table_home">Home</string>
    <string name="table_trip">Trip</string>
    <string name="table_normal_day">Normal day</string>
    <string name="table_home_day">Home day</string>
    <string name="table_trip_day">Trip day</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_cancel">Cancel</string>

    <!-- Strings related to screens -->
    <string name="shared_pref">DOMOTION</string>
    <string name="error_no_connection">No connection to Domotion</string>
    <string name="error_request">Error in request to Domotion</string>
    <string name="error_response">Error in response from Domotion</string>
    <string name="error_ssl">Error in SSL security</string>
    <string name="error_auth">Error logging in to Domotion</string>
    <string name="button_login">Login</string>
    <string name="button_retry">Retry</string>
    <string name="open_browser">Open Browser</string>

    <!-- Strings related to action buttons -->
    <string name="button_recalc">Recalculating</string>
    <string name="button_add">Adding</string>
    <string name="button_delete">Deleting</string>
    <string name="button_edit">Editing</string>
    <string name="button_set">Setting value</string>
    <string name="update_recalc">timerrecalc</string>
    <string name="update_holidays">holidays</string>

    <!-- Strings related to dialogs -->
    <string name="dialog_confirm">Confirm delete</string>
    <string name="dialog_delete">Are you sure to delete this item?</string>
    <string name="dialog_holiday">Edit holiday</string>
    <string name="dialog_holiday_edit">Edit holiday and store changes?</string>
    <string name="dialog_holiday_add">Add holiday and store changes?</string>
    <string name="dialog_holidays_type">Type</string>
    <string name="dialog_holidays_start">Start</string>
    <string name="dialog_holidays_end">End</string>
    <string name="dialog_timer">Edit timer</string>
    <string name="dialog_timer_edit">Edit timer and store changes?</string>
    <string name="dialog_timers_name">Name</string>
    <string name="dialog_timers_description">Description</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_update">Updating</string>
    <string name="dialog_cancel">Canceled</string>
    <string name="dialog_analog">Edit value</string>

    <!-- errors -->
    <string name="error_initializing">Error initializing</string>
    <string name="error_updating">Error updating</string>

    <!-- misc -->
    <string name="image_button">Button</string>

</resources>
