<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.helly.domotion.TimersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/header_timers_sunrise"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewSunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray"
                android:text="@string/header_default_all"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/header_timers_sunset"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewSunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray"
                android:text="@string/header_default_all"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <com.helly.domotion.ZoomLayout.ZoomScrollbarsLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sbBackgroundColor="@color/colorScrollBack"
            app:sbIndicatorColor="@color/colorScrollIndicator"
            app:drawScrollbars="true"
            app:fadeScrollbars="true"
            app:sizeScrollbars="3dp">

            <com.helly.domotion.ZoomLayout.ZoomLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:overScrollHorizontal="false"
                app:overScrollVertical="false"
                app:posTopLeft="true"
                app:overPinchable="true"
                app:initialZoom="0.4"
                app:minZoom="0.4"
                app:minZoomType="realZoom"
                app:maxZoom="2.0"
                app:maxZoomType="realZoom"
                app:hasClickableChildren="true">

                <TableLayout
                    android:id="@+id/TimersTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>
            </com.helly.domotion.ZoomLayout.ZoomLayout>
        </com.helly.domotion.ZoomLayout.ZoomScrollbarsLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/TimersNoConnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:gravity="center_horizontal">
    </TableLayout>

</FrameLayout>
